--- a/src/common/iview/package.json
+++ b/src/common/iview/package.json
@@ -3,26 +3,25 @@
     [
       {
         "name": "iview",
-        "raw": "iview@^2.0.0",
-        "rawSpec": "^2.0.0",
+        "raw": "iview",
+        "rawSpec": "",
         "scope": null,
-        "spec": ">=2.0.0 <3.0.0",
-        "type": "range"
-      },
-      "/Users/nizhanjun/develop/git/yongyou/signin_for_web"
+        "spec": "latest",
+        "type": "tag"
+      }
     ]
   ],
-  "_cnpm_publish_time": 1510802280299,
-  "_from": "iview@>=2.0.0 <3.0.0",
+  "_cnpm_publish_time": 1512112018193,
+  "_from": "iview@latest",
   "_hasShrinkwrap": false,
-  "_id": "iview@2.7.3",
+  "_id": "iview@2.7.4",
   "_inCache": true,
   "_installable": true,
   "_location": "/iview",
   "_nodeVersion": "8.9.0",
   "_npmOperationalInternal": {
     "host": "s3://npm-registry-packages",
-    "tmp": "tmp/iview-2.7.3.tgz_1510802280117_0.26507213013246655"
+    "tmp": "tmp/iview-2.7.4.tgz_1512112018019_0.8536987523548305"
   },
   "_npmUser": {
     "email": "admin@aresn.com",
@@ -32,20 +31,19 @@
   "_phantomChildren": {},
   "_requested": {
     "name": "iview",
-    "raw": "iview@^2.0.0",
-    "rawSpec": "^2.0.0",
+    "raw": "iview",
+    "rawSpec": "",
     "scope": null,
-    "spec": ">=2.0.0 <3.0.0",
-    "type": "range"
+    "spec": "latest",
+    "type": "tag"
   },
   "_requiredBy": [
-    "/"
+    "#USER"
   ],
-  "_resolved": "https://registry.npm.taobao.org/iview/download/iview-2.7.3.tgz",
-  "_shasum": "b1e5857ffb876468205f6b0aea3475bb6d1ab0aa",
+  "_resolved": "https://registry.npm.taobao.org/iview/download/iview-2.7.4.tgz",
+  "_shasum": "be5450970a2e83623d66579e8c05ae7ed63f5cc8",
   "_shrinkwrap": null,
-  "_spec": "iview@^2.0.0",
-  "_where": "/Users/nizhanjun/develop/git/yongyou/signin_for_web",
+  "_spec": "iview",
   "author": {
     "name": "Aresn"
   },
@@ -91,11 +89,11 @@
     "karma-chrome-launcher": "^2.2.0",
     "karma-coverage": "^1.1.1",
     "karma-mocha": "^1.3.0",
-    "karma-sinon-chai": "^1.3.2",
+    "karma-sinon-chai": "^1.3.3",
     "karma-sourcemap-loader": "^0.3.7",
     "karma-spec-reporter": "0.0.26",
-    "karma-webpack": "^2.0.5",
-    "less": "^2.7.1",
+    "karma-webpack": "^2.0.6",
+    "less": "^2.7.3",
     "less-loader": "^2.2.3",
     "lolex": "^1.5.2",
     "mocha": "^3.5.3",
@@ -103,23 +101,23 @@
     "sinon-chai": "^2.14.0",
     "style-loader": "^0.13.1",
     "url-loader": "^0.5.9",
-    "vue": "^2.5.2",
+    "vue": "^2.5.9",
     "vue-hot-reload-api": "^1.3.3",
     "vue-html-loader": "^1.2.3",
     "vue-loader": "^11.3.4",
     "vue-router": "^2.8.1",
     "vue-style-loader": "^1.0.0",
-    "vue-template-compiler": "^2.5.2",
-    "webpack": "^3.7.1",
-    "webpack-dev-server": "^2.9.2",
+    "vue-template-compiler": "^2.5.9",
+    "webpack": "^3.8.1",
+    "webpack-dev-server": "^2.9.5",
     "webpack-merge": "^3.0.0"
   },
   "directories": {},
   "dist": {
     "noattachment": false,
-    "shasum": "b1e5857ffb876468205f6b0aea3475bb6d1ab0aa",
-    "size": 1292536,
-    "tarball": "http://registry.npm.taobao.org/iview/download/iview-2.7.3.tgz"
+    "shasum": "be5450970a2e83623d66579e8c05ae7ed63f5cc8",
+    "size": 1298400,
+    "tarball": "http://registry.npm.taobao.org/iview/download/iview-2.7.4.tgz"
   },
   "engines": {
     "node": ">= 6.0.0",
@@ -129,7 +127,7 @@
     "dist",
     "src"
   ],
-  "gitHead": "5e70fad6283ecb238c9fd12bdfa85701947642a2",
+  "gitHead": "ebe7edbf0dd156fc7f626885613d4cd3858a9d3a",
   "homepage": "http://www.iviewui.com",
   "keywords": [
     "iview",
@@ -153,7 +151,7 @@
   "peerDependencies": {
     "vue": "^2.5.2"
   },
-  "publish_time": 1510802280299,
+  "publish_time": 1512112018193,
   "readme": "ERROR: No README data found!",
   "repository": {
     "type": "git",
@@ -172,5 +170,5 @@
     "unit": "cross-env BABEL_ENV=test karma start test/unit/karma.conf.js --single-run"
   },
   "title": "iView",
-  "version": "2.7.3"
+  "version": "2.7.4"
 }
