--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "g2": "^2.3.7",
     "iview": "^2.7.4",
     "perfect-scrollbar": "^0.7.1",
+    "sortablejs": "^1.7.0",
     "url-search-params": "^0.9.0",
     "vue": "^2.2.6",
     "vue-router": "^2.4.0",
