--- a/package.json
+++ b/package.json
@@ -16,11 +16,12 @@
   "dependencies": {
     "axios": "^0.16.1",
     "g2": "^2.3.7",
+    "iview": "^2.8.0",
     "perfect-scrollbar": "^0.7.1",
     "sortablejs": "^1.7.0",
     "url-search-params": "^0.9.0",
-    "iview": "^2.8.0",
     "vue": "^2.4.2",
+    "vue-preview": "^1.0.5",
     "vue-router": "^2.4.0",
     "vuex": "^2.3.1"
   },
