--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "perfect-scrollbar": "^0.7.1",
     "sortablejs": "^1.7.0",
     "url-search-params": "^0.9.0",
+    "video.js": "^6.6.0",
     "vue": "^2.4.2",
     "vue-preview": "^1.0.5",
     "vue-router": "^2.4.0",
