--- a/package.json
+++ b/package.json
@@ -7,9 +7,9 @@
     "dev": "cross-env NODE_ENV=development node ./webpack/dev.js",
     "prevdev": "cross-env NODE_ENV=prevdev node ./webpack/dev.js",
     "buildev": "cross-env NODE_ENV=buildev node ./webpack/dev.js",
-    "test": "npm install && rm -rf ./web && cross-env NODE_ENV=test webpack --config ./webpack/test.js",
-    "prev": "npm install && rm -rf ./web && cross-env NODE_ENV=prev webpack --config ./webpack/prev.js",
-    "build": "npm install && rm -rf ./web && cross-env NODE_ENV=production webpack --config ./webpack/build.js"
+    "test": "rm -rf ./web && cross-env NODE_ENV=test webpack --config ./webpack/test.js",
+    "prev": "rm -rf ./web && cross-env NODE_ENV=prev webpack --config ./webpack/prev.js",
+    "build": "rm -rf ./web && cross-env NODE_ENV=production webpack --config ./webpack/build.js"
   },
   "author": "",
   "license": "ISC",
