--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "url-search-params": "^0.9.0",
     "video.js": "^6.6.0",
     "vue": "^2.4.2",
+    "vue-i18n": "^8.0.0",
     "vue-preview": "^1.0.5",
     "vue-router": "^2.4.0",
     "vuex": "^2.3.1"
