--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "vue-i18n": "^8.0.0",
     "vue-preview": "^1.0.5",
     "vue-router": "^2.4.0",
-    "vuex": "^2.3.1"
+    "vuex": "^2.3.1",
+    "yyzone": "^1.0.7"
   },
   "devDependencies": {
     "autoprefixer": "^6.7.7",
