--- a/.babelrc
+++ b/.babelrc
@@ -1,12 +1,34 @@
 {
     "presets": [
-        "es2015",
-        "vue",
-        "stage-2"
+        [
+            "@babel/preset-env"
+        ]
     ],
-    "ignore": [],
     "plugins": [
-        "transform-es2015-destructuring",
-        "transform-remove-strict-mode"
+        [
+            "@babel/plugin-transform-runtime",
+            {
+                "corejs": false,
+                "helpers": true,
+                "regenerator": true,
+                "useESModules": false
+            }
+        ],
+        "@babel/plugin-syntax-dynamic-import",
+        "@babel/plugin-syntax-import-meta",
+        "@babel/plugin-proposal-class-properties",
+        "@babel/plugin-proposal-json-strings",
+        [
+            "@babel/plugin-proposal-decorators",
+            {
+                "legacy": true
+            }
+        ],
+        "@babel/plugin-proposal-function-sent",
+        "@babel/plugin-proposal-export-namespace-from",
+        "@babel/plugin-proposal-numeric-separator",
+        "@babel/plugin-proposal-throw-expressions",
+        "@babel/plugin-transform-modules-commonjs",
+        "@babel/plugin-transform-strict-mode"
     ]
 }
