--- a/package.json
+++ b/package.json
@@ -8,9 +8,10 @@
 	"private": true,
 	"main": "main.js",
 	"scripts": {
-		"test": "echo \"Error: no test specified\" && exit 1",
 		"start": "cross-env NODE_ENV=development webpack-dev-server --config ./webpack/webpack.dev.js",
-		"build": "cross-env NODE_ENV=production webpack --config ./webpack/webpack.prod.js"
+		"test": "cross-env NODE_ENV=production webpack --config --progress ./webpack/webpack.prod.js --progress",
+		"prev": "cross-env NODE_ENV=production webpack --config --progress ./webpack/webpack.prod.js --progress",
+		"build": "cross-env NODE_ENV=production webpack --config ./webpack/webpack.prod.js --progress"
 	},
 	"keywords": [],
 	"author": "",
@@ -33,6 +34,7 @@
 		"@babel/plugin-transform-strict-mode": "^7.0.0",
 		"@babel/preset-env": "^7.0.0",
 		"@babel/runtime": "^7.0.0-beta.55",
+		"autoprefixer": "^9.3.1",
 		"babel-loader": "^8.0.4",
 		"babel-plugin-import": "^1.11.0",
 		"clean-webpack-plugin": "^1.0.0",
@@ -43,6 +45,8 @@
 		"html-webpack-plugin": "^3.2.0",
 		"less": "^3.8.1",
 		"less-loader": "^4.1.0",
+		"mini-css-extract-plugin": "^0.4.5",
+		"postcss-loader": "^3.0.0",
 		"style-loader": "^0.23.1",
 		"uglifyjs-webpack-plugin": "^2.0.1",
 		"url-loader": "^1.1.2",
