--- a/package.json
+++ b/package.json
@@ -8,11 +8,8 @@
 	"private": true,
 	"main": "main.js",
 	"scripts": {
-		"start": "webpack-dev-server --config ./webpack/webpack.dev.js --progress",
+		"start": "webpack-dev-server --mode=development --config ./webpack/webpack.dev.js --progress",
 		"dev": "cross-env NODE_ENV=development npm run start",
-		"dev:daily": "cross-env NODE_ENV=daily npm run start",
-		"dev:prev": "cross-env NODE_ENV=prev npm run start",
-		"dev:production": "cross-env NODE_ENV=production npm run start",
 		"test": "npm install && cross-env NODE_ENV=test webpack --config ./webpack/webpack.prod.js --progress",
 		"prev": "npm install && cross-env NODE_ENV=prev webpack --config ./webpack/webpack.prod.js --progress",
 		"build": "npm install && cross-env NODE_ENV=production webpack --config ./webpack/webpack.prod.js --progress",
@@ -45,6 +42,7 @@
 		"clean-webpack-plugin": "^1.0.0",
 		"copy-webpack-plugin": "^4.6.0",
 		"cross-env": "^5.2.0",
+		"css-hot-loader": "^1.4.2",
 		"css-loader": "^1.0.1",
 		"file-loader": "^2.0.0",
 		"happypack": "^5.0.0",
@@ -57,6 +55,7 @@
 		"uglifyjs-webpack-plugin": "^2.0.1",
 		"url-loader": "^1.1.2",
 		"vue-loader": "^15.4.2",
+		"vue-style-loader": "^4.1.2",
 		"vue-template-compiler": "^2.5.17",
 		"webpack": "^4.26.0",
 		"webpack-bundle-analyzer": "^3.0.3",
@@ -76,9 +75,10 @@
 		"video.js": "^6.6.0",
 		"vue": "^2.5.17",
 		"vue-i18n": "^8.0.0",
-		"vue-preview": "^1.0.5",
+		"vue-photo-preview": "^1.1.2",
+		"vue-preview": "^1.1.3",
 		"vue-router": "^3.0.2",
 		"vuex": "^2.3.1",
-		"yyzone": "^1.0.20"
+		"yyzone": "^1.0.21"
 	}
 }
