--- a/package.json
+++ b/package.json
@@ -18,7 +18,11 @@
 	"keywords": [],
 	"author": "",
 	"license": "ISC",
-	"browserslist": "> 0.25%, not dead",
+	"browserslist": [
+		"> 1%",
+		"last 2 versions",
+		"not ie <= 8"
+	],
 	"devDependencies": {
 		"@babel/core": "^7.1.6",
 		"@babel/plugin-proposal-class-properties": "^7.0.0",
@@ -57,7 +61,7 @@
 		"vue-loader": "^15.4.2",
 		"vue-style-loader": "^4.1.2",
 		"vue-template-compiler": "^2.5.17",
-		"webpack": "^4.26.0",
+		"webpack": "^4.8.1",
 		"webpack-bundle-analyzer": "^3.0.3",
 		"webpack-cli": "^3.1.2",
 		"webpack-dev-server": "^3.1.10",
