--- a/package.json
+++ b/package.json
@@ -1,8 +1,5 @@
 {
 	"name": "logger",
-	"sideEffects": [
-		"*.css"
-	],
 	"version": "1.0.0",
 	"description": "",
 	"private": true,
@@ -12,7 +9,7 @@
 		"dev": "cross-env NODE_ENV=development npm run start",
 		"test": "npm install && cross-env NODE_ENV=test webpack --config ./webpack/webpack.prod.js --progress",
 		"prev": "npm install && cross-env NODE_ENV=prev webpack --config ./webpack/webpack.prod.js --progress",
-		"build": "npm install && cross-env NODE_ENV=production webpack --config ./webpack/webpack.prod.js --progress",
+		"build": "cross-env NODE_ENV=production webpack --config ./webpack/webpack.prod.js --progress",
 		"analyzer": "cross-env NODE_ENV=prod_build webpack --mode production --config ./webpack/webpack.analyzer.js --profile --json > compilation-stats.json"
 	},
 	"keywords": [],
