--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
 		"dev": "cross-env NODE_ENV=development npm run start",
 		"dev-prev": "cross-env NODE_ENV=dev-prev npm run start",
 		"test": "cross-env NODE_ENV=test webpack --config ./webpack/webpack.prod.js --progress",
+		"daily": "cross-env NODE_ENV=daily webpack --config ./webpack/webpack.prod.js --progress",
 		"prev": "cross-env NODE_ENV=prev webpack --config ./webpack/webpack.prod.js --progress",
 		"build": "cross-env NODE_ENV=production webpack --config ./webpack/webpack.prod.js --progress",
 		"analyzer": "cross-env NODE_ENV=prod_build webpack --mode production --config ./webpack/webpack.analyzer.js --profile --json > compilation-stats.json",
