修改构建指令

--- a/package.json
+++ b/package.json
@@ -6,13 +6,13 @@
 	"main": "main.js",
 	"scripts": {
 		"start": "webpack-dev-server --mode=development --config ./webpack/webpack.dev.js --progress",
+		"_build": "webpack --config ./webpack/webpack.prod.js --progress",
 		"dev": "cross-env NODE_ENV=development npm run start",
-		"dev-prev": "cross-env NODE_ENV=dev-prev npm run start",
-		"test": "cross-env NODE_ENV=test webpack --config ./webpack/webpack.prod.js --progress",
-		"u8c-daily": "npm run clean && cross-env NODE_ENV=u8c-daily webpack --config ./webpack/webpack.prod.js --progress",
-		"daily": "cross-env NODE_ENV=daily webpack --config ./webpack/webpack.prod.js --progress",
-		"prev": "cross-env NODE_ENV=prev webpack --config ./webpack/webpack.prod.js --progress",
-		"build": "cross-env NODE_ENV=production webpack --config ./webpack/webpack.prod.js --progress",
+		"develop": "cross-env NODE_ENV=develop && npm run _build",
+		"test": "cross-env NODE_ENV=test && npm run _build",
+		"u8c_daily": "npm run clean && cross-env NODE_ENV=u8c_daily && npm run _build",
+		"prev": "cross-env NODE_ENV=prev && npm run _build",
+		"build": "cross-env NODE_ENV=production && npm run _build",
 		"analyzer": "cross-env NODE_ENV=prod_build webpack --mode production --config ./webpack/webpack.analyzer.js --profile --json > compilation-stats.json",
 		"clean": "rm -rf node_modules && npm install"
 	},
