--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
 		"dev": "cross-env NODE_ENV=development npm run start",
 		"develop": "cross-env NODE_ENV=develop && npm run _build",
 		"test": "cross-env NODE_ENV=test && npm run _build",
-		"u8c_daily": "npm run clean && cross-env NODE_ENV=u8c_daily && npm run _build",
+		"u8c_daily": "cross-env NODE_ENV=u8c_daily && npm run _build",
 		"prev": "cross-env NODE_ENV=prev && npm run _build",
 		"build": "cross-env NODE_ENV=production && npm run _build",
 		"analyzer": "cross-env NODE_ENV=prod_build webpack --mode production --config ./webpack/webpack.analyzer.js --profile --json > compilation-stats.json",
