--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
 		"mini-css-extract-plugin": "^0.4.5",
 		"postcss-loader": "^3.0.0",
 		"style-loader": "^0.23.1",
+		"style-resources-loader": "^1.2.1",
 		"url-loader": "^1.1.2",
 		"vue-loader": "^15.4.2",
 		"vue-style-loader": "^4.1.2",
@@ -81,6 +82,6 @@
 		"vue-photo-preview": "^1.1.2",
 		"vue-router": "^3.0.2",
 		"vuex": "^2.3.1",
-		"yyzone": "^1.1.32"
+		"yyzone": "^1.1.35"
 	}
 }
