--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
 	"main": "main.js",
 	"scripts": {
 		"start": "webpack-dev-server --mode=development --config ./webpack/webpack.dev.js --progress",
-		"_build": "webpack --config ./webpack/webpack.prod.js --progress",
+		"_build": "npm install && webpack --config ./webpack/webpack.prod.js --progress",
 		"dev": "cross-env NODE_ENV=development npm run start",
 		"develop": "cross-env NODE_ENV=develop npm run _build",
 		"test": "cross-env NODE_ENV=test npm run _build",
