--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
 		"start": "webpack-dev-server --mode=development --config ./webpack/webpack.dev.js --progress",
 		"_build": "webpack --config ./webpack/webpack.prod.js --progress",
 		"dev": "cross-env NODE_ENV=dev npm run start",
-		"develop": "cross-env NODE_ENV=develop npm run _build",
-		"test": "cross-env NODE_ENV=test npm run _build",
+		"develop": "npm run clean && cross-env NODE_ENV=develop npm run _build",
+		"test": "npm run clean && cross-env NODE_ENV=test npm run _build",
 		"prev": "npm run clean && cross-env NODE_ENV=prev npm run _build",
 		"build": "npm run clean && cross-env NODE_ENV=build npm run _build",
 		"analyzer": "cross-env NODE_ENV=prod_build webpack --mode production --config ./webpack/webpack.analyzer.js --profile --json > compilation-stats.json",
