--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
 		"not ie <= 8"
 	],
 	"devDependencies": {
-		"@babel/core": "^7.1.6",
+		"@babel/core": "^7.9.0",
 		"@babel/plugin-proposal-class-properties": "^7.0.0",
 		"@babel/plugin-proposal-decorators": "^7.0.0",
 		"@babel/plugin-proposal-export-namespace-from": "^7.0.0",
@@ -35,13 +35,13 @@
 		"@babel/plugin-syntax-dynamic-import": "^7.0.0",
 		"@babel/plugin-syntax-import-meta": "^7.0.0",
 		"@babel/plugin-transform-destructuring": "^7.8.8",
-		"@babel/plugin-transform-modules-commonjs": "^7.1.0",
-		"@babel/plugin-transform-runtime": "^7.1.0",
+		"@babel/plugin-transform-modules-commonjs": "^7.9.0",
+		"@babel/plugin-transform-runtime": "^7.9.0",
 		"@babel/plugin-transform-strict-mode": "^7.0.0",
-		"@babel/preset-env": "^7.0.0",
-		"@babel/runtime": "^7.0.0-beta.55",
+		"@babel/preset-env": "^7.9.0",
+		"@babel/runtime": "^7.9.2",
 		"autoprefixer": "^9.3.1",
-		"babel-loader": "^8.0.4",
+		"babel-loader": "^8.1.0",
 		"babel-plugin-import": "^1.11.0",
 		"clean-webpack-plugin": "^3.0.0",
 		"copy-webpack-plugin": "^5.1.1",
